# goit-pythonweb-hw-12

./: .dockerignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  test.db
docs/: conf.py  index.rst
migrations/: env.py
src/api/: auth.py  contacts.py  users.py  utils.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/schemas/: contacts.py  users.py
src/services/: auth.py  contacts.py  email.py  roles.py  upload_file.py  users.py
src/services/templates/: email_template.html
tests/: conftest.py  test_contacts_repository.py  test_integration_auth.py  test_integration_contacts.py  test_integration_users.py  test_integration_utils.py  test_users_repository.py
