[tool.poetry]
name = "goit-pythonweb-hw-10"
version = "0.1.0"
description = "homework"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
license = "MIT"


[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
sqlalchemy = "^2.0.41"
psycopg2-binary = "^2.9.10"
asyncpg = "^0.30.0"
alembic = "^1.16.1"
uvicorn = "^0.25.0"
pydantic = {extras = ["email"], version = "^2.0"}
pydantic-settings = "^2.9.1"
libgravatar = "^1.0.4"
python-multipart = "^0.0.20"
logging = "^0.4.9.6"
slowapi = "^0.1.9"
fastapi-mail = "^1.5.0"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "==4.0.1"
cloudinary = "^1.44.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"